test/e2e/fixtures/extauth-disabled-on-redirect/queries-https.json
[
  {
    "url": "/target/",
    "method": "GET",
    "insecure": true,
    "headers": {
      "kat-req-http-requested-status": "401"
    }
  }
]
